@@ -665,15 +665,23 @@
 
         <control type="button" id="9001">
             <label>$LOCALIZE[31203]</label>
-            <onclick condition="Container.Content(tvshows) + !Skin.HasSetting(ArtworkDownloaderAll)">XBMC.RunScript(script.artwork.downloader, mode=gui, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
-            <onclick condition="Container.Content(movies) + !Skin.HasSetting(ArtworkDownloaderAll)">XBMC.RunScript(script.artwork.downloader, mode=gui, mediatype=movie, dbid=$INFO[ListItem.DBID])</onclick>
-            <onclick condition="Container.Content(musicvideos) + !Skin.HasSetting(ArtworkDownloaderAll)">XBMC.RunScript(script.artwork.downloader, mode=gui, mediatype=musicvideo, dbid=$INFO[ListItem.DBID])</onclick>
-            <onclick condition="Container.Content(tvshows) + Skin.HasSetting(ArtworkDownloaderAll)">XBMC.RunScript(script.artwork.downloader, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
-            <onclick condition="Container.Content(movies) + Skin.HasSetting(ArtworkDownloaderAll)">XBMC.RunScript(script.artwork.downloader, mediatype=movie, dbid=$INFO[ListItem.DBID])</onclick>
-            <onclick condition="Container.Content(musicvideos) + Skin.HasSetting(ArtworkDownloaderAll)">XBMC.RunScript(script.artwork.downloader, mediatype=musicvideo, dbid=$INFO[ListItem.DBID])</onclick>
+            <!-- If ADownloader installed but not ABeef then use AD otherwise prefer AB -->
+            <!-- AD has been depreciated but some still use it -->
+
+            <onclick condition="Container.Content(tvshows) + !Skin.HasSetting(ArtworkDownloaderAll) + System.HasAddon(script.artwork.downloader) + !System.HasAddon(script.artwork.beef)">XBMC.RunScript(script.artwork.downloader, mode=gui, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
+            <onclick condition="Container.Content(movies) + !Skin.HasSetting(ArtworkDownloaderAll) + System.HasAddon(script.artwork.downloader) + !System.HasAddon(script.artwork.beef)">XBMC.RunScript(script.artwork.downloader, mode=gui, mediatype=movie, dbid=$INFO[ListItem.DBID])</onclick>
+            <onclick condition="Container.Content(tvshows) + Skin.HasSetting(ArtworkDownloaderAll) + System.HasAddon(script.artwork.downloader) + !System.HasAddon(script.artwork.beef)">XBMC.RunScript(script.artwork.downloader, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
+            <onclick condition="Container.Content(movies) + Skin.HasSetting(ArtworkDownloaderAll) + System.HasAddon(script.artwork.downloader) + !System.HasAddon(script.artwork.beef)">XBMC.RunScript(script.artwork.downloader, mediatype=movie, dbid=$INFO[ListItem.DBID])</onclick>
+
+            <onclick condition="Container.Content(episodes) + !Skin.HasSetting(ArtworkDownloaderAll) + System.HasAddon(script.artwork.beef)">XBMC.RunScript(script.artwork.beef, mode=gui, mediatype=episode, dbid=$INFO[ListItem.DBID])</onclick>
+            <onclick condition="Container.Content(tvshows) + !Skin.HasSetting(ArtworkDownloaderAll) + System.HasAddon(script.artwork.beef)">XBMC.RunScript(script.artwork.beef, mode=gui, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
+            <onclick condition="Container.Content(movies) + !Skin.HasSetting(ArtworkDownloaderAll) + System.HasAddon(script.artwork.beef)">XBMC.RunScript(script.artwork.beef, mode=gui, mediatype=movie, dbid=$INFO[ListItem.DBID])</onclick>
+            <onclick condition="Container.Content(episodes) + Skin.HasSetting(ArtworkDownloaderAll) + System.HasAddon(script.artwork.beef)">XBMC.RunScript(script.artwork.beef, mode=auto, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
+            <onclick condition="Container.Content(tvshows) + Skin.HasSetting(ArtworkDownloaderAll) + System.HasAddon(script.artwork.beef)">XBMC.RunScript(script.artwork.beef, mode=auto, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
+            <onclick condition="Container.Content(movies) + Skin.HasSetting(ArtworkDownloaderAll) + System.HasAddon(script.artwork.beef)">XBMC.RunScript(script.artwork.beef, mode=auto, mediatype=movie, dbid=$INFO[ListItem.DBID])</onclick>
             <description>Get Artwork</description>
             <include>Defs_Hidden_Button</include>
-            <visible>[Container.Content(tvshows) | Container.Content(movies) | Container.Content(musicvideos)] + system.hasaddon(script.artwork.downloader)</visible>
+            <visible>[Container.Content(tvshows) | Container.Content(movies) | Container.Content(musicvideos) | Container.Content(episodes)] + [system.hasaddon(script.artwork.downloader) | system.hasaddon(script.artwork.beef)]</visible>
         </control>
 
         <control type="button" id ="6">
