@@ -662,6 +662,15 @@
                             <onclick>Skin.ToggleSetting(UseHoursMinutes)</onclick>
                         </control> -->
 
+                        <control type="radiobutton" id="9270" description="Artwork button downloads all artwork">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>$LOCALIZE[31366]</label>
+                            <selected>Skin.HasSetting(ArtworkDownloaderAll)</selected>
+                            <onclick>Skin.ToggleSetting(ArtworkDownloaderAll)</onclick>
+                            <enable>System.HasAddon(script.artwork.downloader) | System.HasAddon(script.artwork.beef)</enable>
+                        </control>
+
                         <control type="radiobutton" id="9278" description="Enable bounce animations">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
                             <include>Defs_Settings_Button</include>
