@@ -4,6 +4,8 @@ LEIA - DialogAddonSettings
 LEIA - Change fanart to Leia version
 Watched Indicators update
 Rearrange skin settings
+Add support for Artwork Beef
+Add download all option
 
 [B]0.9.11[/B]
 Add support for AEL metadata
